Progress on section 1 Added background colour, font sizes, font colour and arranged elements for section one of the landing page. Committing this as the header-logo and header-links elements are to be arranged in column 1 and 2, respectively to hopefully allow for them to be aligned correctly with the other elements. This means the first section will be only two columns and not two separate header and hero-text elements combined which should decrease the total CSS and keep it better organised. The new two columns will have the header-logo aligned at flex-start and the header-links aligned flex end and we'll see how that goes!

--- a/foundations/landing_page/style.css
+++ b/foundations/landing_page/style.css
@@ -1,19 +1,95 @@
 body{
     display: flex;
-    flex-direction: ;
-    font: roboto, sans-serif;
+    flex-direction: column;
+    font-family: roboto, sans-serif;
+}
+
+a {
+    /*color:*/
+    text-decoration: none;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    gap: 16px;
+}
+
+.header-logo{
+    font-weight: 600;
+    font-size: 20px;
 }
 
 .header,
 .footer{
+    background-color: #1F2937;
+    color: white;
+
     display: flex;
     justify-content: space-between;
-    
+    align-items: center;
+    flex-direction: row;
 }
-
+a {
+    color: white;
+}
 .header-links{
     display: flex;
     display: row;
+}
+
+.section1{
+    background-color: #1F2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+    
+}
+
+.hero-text{
+    font-weight: 900;
+    font-size: 48px;
+}
+.subtext{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+.column1{
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+    padding: 20px;
+    justify-content: center;
+    align-content: center;
+}
+
+.sign-up {
+    width: 20%;
+    background-color: #3882F6;
+    color: white;
+    padding: 8px;
+    border: none;
+    border-radius: 10%;
+    align-items: flex-start;
+}
+.placeholder-image{
+    width: 300px;
+    height: 100px;
+    background-color: grey;
+    padding: 50px;
+
+    align-items: center;
+    justify-content: center;
+}
+.img-text{
+    display: flex;
+    justify-content: center;
+    align-content: center;
 }
 
 img{
